tests/baselines/reference/unusedTypeParameterInLambda3.errors.txt
tests/cases/compiler/unusedTypeParameterInLambda3.ts(5,15): error TS6133: 'U' is declared but never used.


==== tests/cases/compiler/unusedTypeParameterInLambda3.ts (1 errors) ====
    class A<T> {
        public x: T;
    }
    
    var y: new <T,U>(a:T)=>void;
                  ~
!!! error TS6133: 'U' is declared but never used.
    